[package]
name = "twitter-follower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.7.0"
reqwest = { version = "0.12.0", features = ["blocking", "rustls-tls"] }
tokio = { version = "1.0", default-features = false, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twitter-v2 = "0.1.8"
axum = "0.7.5"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
dotenv = "0.15.0"
tracing = "0.1.32"